<resources>
    <string name="quick_action_resume_pause_navigation">Resume/Pause Navigation</string>
    <string name="quick_action_resume_pause_navigation_descr">Press this button to pause the navigation, or to resume it if it was already paused.</string>
    <string name="quick_action_show_navigation_finish_dialog">Show Finish navigation dialog</string>
    <string name="quick_action_start_stop_navigation">Start/Finish Navigation</string>
    <string name="quick_action_start_stop_navigation_descr">Press this button to start the navigation, or to stop it if it was already started.</string>
    <string name="store_tracks_in_monthly_directories">Store recorded tracks in monthly folders</string>
    <string name="store_tracks_in_monthly_directories_descrp">Store recorded tracks in sub-folders per recording month (like 2017-01).</string>
    <string name="shared_string_reset">Reset</string>
    <string name="shared_string_reload">Reload</string>
    <string name="mapillary_menu_descr_tile_cache">Reload tiles to see up to date data.</string>
    <string name="mapillary_menu_title_tile_cache">Tile cache</string>
    <string name="wrong_user_name">Wrong user name!</string>
    <string name="shared_string_to">To</string>
    <string name="mapillary_menu_date_from">From</string>
    <string name="mapillary_menu_descr_dates">View images added in a certain period.</string>
    <string name="mapillary_menu_title_dates">Dates</string>
    <string name="mapillary_menu_edit_text_hint">Type user name</string>
    <string name="mapillary_menu_descr_username">View images added by a certain user.</string>
    <string name="mapillary_menu_title_username">Username</string>
    <string name="mapillary_menu_filter_description">You can filter images by submitter or by date. Filters apply only for closeup zoom.</string>
    <string name="map_widget_ruler_control">Radius ruler</string>
    <string name="shared_string_permissions">Permissions</string>
    <string name="import_gpx_failed_descr">OsmAnd cannot import the file. Please check if OsmAnd has permission to read file from its location.</string>
    <string name="distance_moving">Distance corrected</string>
    <string name="mapillary_image">Mapillary image</string>
    <string name="open_mapillary">Open Mapillary</string>
    <string name="shared_string_install">Install</string>
    <string name="improve_coverage_mapillary">Improve photo coverage with Mapillary</string>
    <string name="improve_coverage_install_mapillary_desc">You can take your own photos or series of photos and attach them to this map location.\n\nTo do this you need to install the Mapillary app from the Google Play Store.</string>
    <string name="online_photos">Online photos</string>
    <string name="shared_string_add_photos">Add photos</string>
    <string name="no_photos_descr">We do not have photos for this location</string>
    <string name="mapillary_action_descr">Contribute with your own street-level views of this location via Mapillary.</string>
    <string name="mapillary_widget">Mapillary widget</string>
    <string name="mapillary_widget_descr">Allows you to quickly contribute to Mapillary</string>
    <string name="mapillary_descr">Online street-level photos for everyone. Discover places, collaborate, capture the world.</string>
    <string name="mapillary">Mapillary</string>
    <string name="plugin_mapillary_descr">Street-level photos for everyone. Discover places, collaborate, capture the world.</string>
    <string name="private_access_routing_req">Your destination is located in an area with private access. Do you want to allow access to the private roads for this trip?</string>
    <string name="restart_search">Restart search</string>
    <string name="increase_search_radius">Increase search radius</string>
    <string name="nothing_found">Nothing found :(</string>
    <string name="nothing_found_descr">Modify the search query or increase the search radius</string>
    <string name="quick_action_showhide_osmbugs_title">Show/hide OSM Notes</string>
    <string name="quick_action_osmbugs_show">Show OSM Notes</string>
    <string name="quick_action_osmbugs_hide">Hide OSM Notes</string>
    <string name="quick_action_showhide_osmbugs_descr">Tapping the action button will show or hide OSM Notes on the map.</string>
    <string name="sorted_by_distance">Sorted by distance</string>
    <string name="search_favorites">Search favorites</string>
    <string name="hillshade_menu_download_descr">To see relief hillshading on the map, you need to download the hillshade overlay map of this region.</string>
    <string name="hillshade_purchase_header">To see relief hillshading on the map, you need to buy and install the Contour Lines plugin</string>
    <string name="access_direction_audio_feedback">Direction audio feedback</string>
    <string name="access_direction_haptic_feedback">Direction haptic feedback</string>
    <string name="access_smart_autoannounce">Smart autoannounce</string>
    <string name="access_autoannounce_period">Autoannounce period</string>
    <string name="shared_string_on">On</string>
    <string name="shared_string_off">Off</string>
    <string name="shared_string_enable">Enable</string>
    <string name="shared_string_enabled">Enabled</string>
    <string name="shared_string_disabled">Disabled</string>
    <string name="shared_string_accessibility">Accessibility</string>
    <string name="proxy_pref_title">Proxy</string>
    <string name="proxy_pref_descr">Setup a proxy Internet communication</string>
    <string name="speak_pedestrian">Pedestrian crosswalks</string>
    <string name="speed_limit_exceed">Speed limit tolerance</string>
    <string name="speed_limit_exceed_message">Select speed limit tolerance margin, above which you will receive a voice warning.</string>
    <string name="speak_favorites">Nearby Favorites</string>
    <string name="speak_poi">Nearby POI</string>
    <string name="voice_provider_descr">Select voice guidance for navigation</string>
    <string name="voice_provider">Voice guidance</string>
    <string name="enable_proxy_descr">Configure HTTP Proxy for all network requests</string>
    <string name="proxy_host_title">Proxy Host</string>
    <string name="proxy_host_descr">Configure your proxy\'s hostname (e.g. 127.0.0.1)</string>
    <string name="proxy_port_title">Proxy Port</string>
    <string name="proxy_port_descr">Configure your proxy\'s port number (e.g. 8118)</string>
    <string name="speech_rate">Speech Rate</string>
    <string name="speak_street_names">Street names (TTS)</string>
    <string name="speak_speed_limit">Speed limit</string>
    <string name="speak_cameras">Speed cameras</string>
    <string name="speak_traffic_warnings">Traffic warnings</string>
    <string name="settings_preset">Default profile</string>
    <string name="settings_preset_descr">Map view and navigation settings are remembered per use profile. Set your default profile here.</string>
    <string name="choose_osmand_theme_descr">Choose application theme</string>
    <string name="choose_osmand_theme">App theme</string>
    <string name="prefer_in_routing_title">Prefer…</string>
    <string name="prefer_in_routing_descr">Prefer motorways</string>
    <string name="show_warnings_title">Show alerts…</string>
    <string name="show_warnings_descr">Configure traffic warnings (speed limits, forced stops, speed bumps), speed camera warnings, and lane information</string>
    <string name="use_compass_navigation_descr">Use the compass when no heading is detected otherwise</string>
    <string name="use_compass_navigation">Use compass</string>
    <string name="auto_zoom_map_descr">Auto zoom map according to your speed (while map is synchronized with current position)</string>
    <string name="auto_zoom_map">Auto zoom map</string>
    <string name="snap_to_road_descr">Snap position to roads during navigation</string>
    <string name="snap_to_road">Snap to road</string>
    <string name="select_navigation_mode">Select transport mode</string>
    <string name="avoid_in_routing_title">Avoid…</string>
    <string name="avoid_in_routing_descr">Avoid toll roads, unpaved, ferries</string>
    <string name="left_side_navigation">Left-hand driving</string>
    <string name="left_side_navigation_descr">Select for countries with left-hand traffic</string>
    <string name="index_settings_descr">Download and manage offline map files stored on your device</string>
    <string name="prefs_plugins_descr">Plugins activate advanced settings and additional functionality</string>
    <string name="prefs_plugins">Plugins</string>
    <string name="support_new_features">Support new features</string>
    <string name="accessibility_mode">Accessibility mode</string>
    <string name="accessibility_default">According to the global system setting</string>
    <string name="direction_style_sidewise">Sidewise (8 sectors)</string>
    <string name="settings_direction_style">Direction style</string>
    <string name="arrival_distance">Arrival announcement</string>
    <string name="arrival_distance_descr">How soon do you want the arrival announcement?</string>
    <string name="routing_settings">Navigation</string>
    <string name="routing_settings_descr">Specify options for navigation</string>
    <string name="index_settings">Manage map files</string>
    <string name="general_settings">General</string>
    <string name="general_settings_descr">Configure display and common settings for the application</string>
    <string name="global_app_settings">Global app settings</string>
    <string name="choose_auto_follow_route">Auto-center map view</string>
    <string name="choose_auto_follow_route_descr">Time until map view synchronizes with current position</string>
    <string name="keep_informing_descr">Re-announce navigation instructions at regular intervals</string>
    <string name="keep_informing">Repeat navigation instructions</string>
    <string name="preferred_locale_descr">Select display language (please restart OsmAnd after changing)</string>
    <string name="preferred_locale">Display language</string>
    <string name="unit_of_length_descr">Change units of length</string>
    <string name="unit_of_length">Unit of length</string>
    <string name="fast_route_mode">Fastest route</string>
    <string name="fast_route_mode_descr">Enable to calculate fastest route or disable for fuel-saving route </string>
    <string name="rotate_map_to_bearing_descr">Select map screen alignment</string>
    <string name="rotate_map_to_bearing">Map orientation</string>
    <string name="map_screen_orientation">Screen orientation</string>
    <string name="map_screen_orientation_descr">Portrait, landscape, or device</string>
    <string name="search_online_address">Online search</string>
    <string name="router_service_descr">Choose an online or offline navigation service</string>
    <string name="router_service">Navigation service</string>
    <string name="use_english_names_descr">Select between native and English names</string>
    <string name="use_english_names">Use English names in maps</string>
    <string name="choose_building">Choose building</string>
    <string name="choose_street">Choose street</string>
    <string name="choose_city">Choose city or postcode</string>
    <string name="ChooseCountry">Choose country</string>
    <string name="app_mode_car">Car</string>
    <string name="app_mode_bicycle">Bicycle</string>
    <string name="app_mode_pedestrian">Pedestrian</string>
    <string name="search_address_top_text">Select address</string>
    <string name="search_address_region">Region</string>
    <string name="search_address_city">City</string>
    <string name="search_address_street">Street</string>
    <string name="search_address_building">Building</string>
    <string name="search_address_building_option">Building</string>
    <string name="search_address_street_option">Intersecting street</string>
</resources>