<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">

	<SwitchPreference
		android:key="speak_routing_alarms"
		android:title="@string/shared_string_on" />

	<Preference
		android:key="voice_announces_info"
		android:selectable="false"
		android:summary="@string/voice_announces_info"
		tools:icon="@drawable/ic_action_info_dark" />

	<SwitchPreference
		android:key="speak_street_names"
		android:title="@string/speak_street_names" />

	<SwitchPreference
		android:key="speak_traffic_warnings"
		android:title="@string/speak_traffic_warnings" />

	<SwitchPreference
		android:key="speak_pedestrian"
		android:title="@string/speak_pedestrian" />

	<SwitchPreference
		android:key="speak_speed_limit"
		android:title="@string/speak_speed_limit" />

	<net.osmand.plus.views.ListFloatPreference
		android:key="speed_limit_exceed"
		android:summary="@string/speed_limit_exceed_message"
		android:title="@string/speed_limit_exceed" />

	<SwitchPreference
		android:key="speak_cameras"
		android:title="@string/speak_cameras" />

	<SwitchPreference
		android:key="speak_tunnels"
		android:title="@string/show_tunnels" />

	<SwitchPreference
		android:key="announce_wpt"
		android:title="@string/shared_string_gpx_waypoints" />

	<SwitchPreference
		android:key="announce_nearby_favorites"
		android:title="@string/speak_favorites" />

	<SwitchPreference
		android:key="announce_nearby_poi"
		android:title="@string/speak_poi" />

	<net.osmand.plus.views.ListIntPreference
		android:key="keep_informing"
		android:summary="@string/keep_informing_descr"
		android:title="@string/keep_informing" />

	<net.osmand.plus.views.ListFloatPreference
		android:key="arrival_distance_factor"
		android:summary="@string/arrival_distance_descr"
		android:title="@string/arrival_distance" />

	<Preference
		android:key="language_and_output"
		android:layout="@layout/simple_preference_category"
		android:selectable="false"
		android:title="@string/language_and_output" />

	<ListPreference
		android:key="voice_provider"
		android:summary="@string/voice_provider_descr"
		android:title="@string/voice_provider" />

</PreferenceScreen>