<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:description="@string/proxy_pref_descr"
	android:key="proxy"
	android:title="@string/proxy_pref_title">

	<SwitchPreferenceCompat
		android:key="enable_proxy"
		android:summaryOff="@string/shared_string_off"
		android:summaryOn="@string/shared_string_on" />

	<Preference
		android:key="proxy_preferences_info"
		android:layout="@layout/preference_info"
		android:persistent="false"
		android:selectable="false"
		android:title="@string/enable_proxy_descr"
		tools:icon="@drawable/ic_action_info_dark" />

	<net.osmand.plus.settings.preferences.EditTextPreferenceEx
		android:dependency="enable_proxy"
		android:key="proxy_host"
		android:summary="@string/proxy_host_descr"
		android:title="@string/proxy_host_title" />

	<net.osmand.plus.settings.preferences.EditTextPreferenceEx
		android:dependency="enable_proxy"
		android:key="proxy_port"
		android:summary="@string/proxy_port_descr"
		android:title="@string/proxy_port_title" />

</PreferenceScreen>