<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:custom="http://schemas.android.com/apk/res/net.osmand.plus"
    xmlns:custom2="http://schemas.android.com/apk/res/net.osmand.views"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
<LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
  
   
<TextView android:id="@+id/TopTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"
		  android:layout_marginTop = "5dp" android:text="@string/search_address_top_text">
</TextView>

<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_horizontal">
<TableLayout android:id="@+id/TableLayout" android:layout_width="fill_parent" android:stretchColumns="1" android:layout_height="wrap_content" android:gravity="center_horizontal">
<TableRow android:id="@+id/TableRow" android:layout_marginLeft = "5dp">
<TextView android:id="@+id/TextView" android:text="@string/search_address_region">
</TextView>
<net.osmand.view.ExpandableButton android:id="@+id/CountryButton" android:text="@string/ChooseCountry" custom:maxVisibleWidth="500dp"/>
<ImageButton android:id="@+id/ResetCountry" android:layout_marginRight = "5dp" android:background="@drawable/reset" android:contentDescription="@string/default_buttons_reset">
</ImageButton>
</TableRow>
<TableRow android:id="@+id/TableRow" android:layout_marginLeft = "5dp" >
<TextView android:id="@+id/TextView" android:text="@string/search_address_city">
</TextView>
<net.osmand.view.ExpandableButton  android:id="@+id/CityButton" android:text="@string/choose_city" custom:maxVisibleWidth="500dp" />
<ImageButton android:id="@+id/ResetCity" android:layout_marginRight = "5dp" android:background="@drawable/reset" android:contentDescription="@string/default_buttons_reset">
</ImageButton>
</TableRow>
<TableRow android:id="@+id/TableRow" android:layout_marginLeft = "5dp">
<TextView android:id="@+id/TextView" android:text="@string/search_address_street">
</TextView>
<net.osmand.view.ExpandableButton android:id="@+id/StreetButton" android:text="@string/choose_street" custom:maxVisibleWidth="500dp"/>
<ImageButton android:id="@+id/ResetStreet" android:layout_marginRight = "5dp" android:background="@drawable/reset" android:contentDescription="@string/default_buttons_reset">
</ImageButton>
</TableRow>
<TableRow android:id="@+id/TableRow" android:layout_marginLeft = "5dp">
<TextView android:id="@+id/BuildingText" android:text="@string/search_address_building">
</TextView>
<net.osmand.view.ExpandableButton android:id="@+id/BuildingButton" android:text="@string/choose_building" custom:maxVisibleWidth="500dp"/>
<ImageButton android:id="@+id/ResetBuilding" android:layout_marginRight = "5dp" android:background="@drawable/reset" android:contentDescription="@string/default_buttons_reset">
</ImageButton>
</TableRow>
</TableLayout>
</LinearLayout>

<RadioGroup android:orientation="horizontal" android:layout_span="3" android:id="@+id/RadioGroup" android:layout_marginLeft="5dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
<RadioButton android:id="@+id/RadioBuilding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_address_building_option"></RadioButton>
<RadioButton android:id="@+id/RadioIntersStreet" android:layout_width="wrap_content" android:layout_marginLeft = "5dp" android:layout_height="wrap_content" android:text="@string/search_address_street_option"></RadioButton>
</RadioGroup>



<LinearLayout  android:id="@+id/LinearLayout" android:layout_width="fill_parent" android:layout_height="wrap_content"  
				android:layout_marginRight = "5dp" android:layout_marginTop = "5dp">
<LinearLayout  android:id="@+id/LinearLayout" android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="left|bottom" >
<Button android:layout_height="wrap_content" android:id="@+id/SearchOnline" android:text="@string/search_online_address" 
			android:layout_width="wrap_content">
</Button>
</LinearLayout>
				
<LinearLayout  android:id="@+id/LinearLayout" android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="right|bottom" >
<Button android:layout_height="wrap_content" android:id="@+id/ShowOnMap" android:text="@string/search_shown_on_map" android:layout_width="wrap_content">
</Button>
<Button android:layout_height="wrap_content" android:id="@+id/NavigateTo" android:text="@string/navigate_to" android:layout_width="wrap_content">
</Button>
</LinearLayout>
</LinearLayout> 
</LinearLayout>
</ScrollView>