<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical" >

<TextView android:id="@+id/TextView" android:layout_width="fill_parent" android:textSize="18dp" android:layout_height="wrap_content"
     android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
     android:gravity="center" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/select_navigation_mode"></TextView>
<LinearLayout android:id="@+id/LinearLayout" android:layout_width="fill_parent" android:gravity="center" android:layout_height="wrap_content" android:orientation="horizontal">
<ImageButton android:contentDescription="@string/app_mode_car" android:id="@+id/CarButton" 
    	android:layout_width="64dp" android:layout_height="64dp"  android:layout_marginLeft="10dp" android:src="@drawable/car_small" />
<ImageButton android:contentDescription="@string/app_mode_bicycle" android:id="@+id/BicycleButton" 
    	android:layout_width="64dp" android:layout_height="64dp"  android:layout_marginLeft="10dp" android:src="@drawable/bicycle_small" />
<ImageButton android:contentDescription="@string/app_mode_pedestrian" android:id="@+id/PedestrianButton"
    	android:layout_width="64dp" android:layout_height="64dp"  android:layout_marginLeft="10dp" android:src="@drawable/pedestrian_small" />
</LinearLayout>



</LinearLayout>
